# qpid-proton-rs

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: send_message.rs  send_message_to_servicebus.rs
src/: c_binding.rs  lib.rs
