[package]
name = "qpid_proton"
version = "0.0.10"
authors = ["Jens Walter <jens@apimeister.com>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["amqp","qpid","proton","eventhub","servicebus"]
repository = "https://github.com/apimeister/qpid-proton-rs/"
description = "Rust bindings for the Apache Qpid Proton C library."

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
log = "0.4"
qpid_proton-sys = "0.1.8"
env_logger = "*"

[build-dependencies]
cmake = "0.1"
